# ansible-role-couchdb

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.yml
.github/workflows/: keepalive.yml  lint.yml  main.yml  molecule.yml  release.yml
defaults/: main.yml
filter_plugins/: couchdb_password_hash.py
handlers/: main.yml
meta/: main.yml
molecule/admin_users/: converge.yml  verify.yml
molecule/backup_restore/: converge.yml  verify.yml
molecule/common/: converge.yml  prepare.yml
molecule/default/: converge.yml  molecule.yml  side_effect.yml  verify.yml
molecule/default/tests/: test_default.py
molecule/restore/: converge.yml  molecule.yml  verify.yml
molecule/users/: converge.yml  molecule.yml  verify.yml
tasks/: main.yml  repo-Debian.yml  repo.yml
templates/: admins.ini.j2  chttpd.ini.j2  couchdb.ini.j2  httpd.ini.j2  query_server_config.ini.j2  vm.args.j2
templates/config/: admins.ini.j2  chttpd.ini.j2  couchdb.ini.j2  log.ini.j2
templates/etc/: vm.args.j2
templates/scripts/: couchdb-backup.sh.j2  couchdb-restore.sh.j2
