[tool.poetry]
name = "couchdb"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pyyaml = "^6.0.1"
ansible-compat = "^4.1.11"
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" }
ansible = "^8.6.1"
requests = "^2.31.0"
netaddr = "^1.2.1"
molecule = "^24.2.0"
molecule-docker = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
